@@ -15,6 +15,16 @@ Changes since 2.1.2
    propagated in slang code involving function dereferences, e.g.,
    (@funcptr)(args).  The bug-fix checks to see that funcptr is
    callable.
+7. src/slparse.c: Generate bos/eos byte-code for empty code blocks,
+   e.g., while (1){}.
+8. lib/sldbcore.sl: When exiting the debugger via the "exit" command,
+   the old SIGINT handler was not getting installed.
+9. src/slang.c: Make sure check_signals gets called when returning
+   from inner_interp.
+10. src/slsig.c: If a slang script establishes a signal handler for
+    SIGINT, then set SLKeyBoard_Quit to 1 if SIGINT is received.
+
+{{{ Previous Versions
 
 Changes since 2.1.1
 1. slsh/lib/readascii.sl: Typo in the usage message corrected.
@@ -70,8 +80,6 @@ Changes since 2.1.1
 25. doc/tm/: Some typos corrected (Jörg Sommer)
 26. slsh/Makefile.in: slsh/doc/html/*.html gets installed in
     $prefix/share/doc/slsh/.
-
-{{{ Previous Versions
 
 Changes since 2.1.0
 1. slsh/lib/print.sl: Only the first element of arrays such as
